 *
 * CHANGELOG.txt
 * @since  1.6.06
 */
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2019-03-28 [B] Correct regex for valid file name in showthumb.php {ron4mac}
2019-03-12 [M] Only build filmstrip if it will be displayed {ron4mac}
2019-03-11 [B] Remove unwarranted urldecode() in theme_html_picture() {ron4mac}
2019-03-04 [M] Fail when CONFIG table cannot be read from DB {ron4mac}
2019-01-26 [B] Correct upload issue by removing memory_limit from HTML5 max upload size calculation {ron4mac}
2018-12-22 [O,M] Updated version check to a functioning condition {ron4mac}
2018-12-22 [O,A] Changed Admin Tools to drop-in widgets {ron4mac}
2018-12-21 [S] Fixed XSS issue {eenemeenemuu}
2018-12-20 [B] Catch system resource errors during HTML5 upload {ron4mac}
2018-11-20 [O] Replace config max upload filesize with combo UI element(s) {ron4mac}
2018-11-20 [B] Correct failure to report range error during config submission {ron4mac}
2018-10-31 [A] Added hidden config option to choose if auto-orient is checked by default in upload forms {eenemeenemuu}
2018-10-30 [B] Fixed misleading approval message if approval is not needed when using single upload form {eenemeenemuu}
2018-10-17 [B] Correction to bridge file for SMF 2.1 (thanks maximus23) {ron4mac}
2018-10-17 [B] Correct error when extracting EXIF from some Canon images (thanks jsh) {ron4mac}
2018-09-20 [B] Provide english fallback for remote help (thanks tbsmark86) {ron4mac}
2018-08-25 [B] Added charset support for PDO driver {chipviled}
2018-07-25 [M] Replaced headers in files changed since 1.6.03 for use in '@since' versioning {ron4mac}